<resources>
    <string name="app_name">Appsistencia Materna</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_notification">Notification</string>
    <string name="action_home">Home</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_my_knowledge">Información para usted</string>
    <string name="menu_my_services">Mis servicios</string>
    <string name="menu_my_health">Mi salud</string>
    <string name="menu_my_voice">Video Llamada</string>
    <string name="menu_my_favourites">Mis favoritos</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_about">Acerca de</string>
    <string name="menu_profile">Actualización del perfil</string>
    <string name="menu_call">Llamada</string>
    <string name="menu_settings">Configuraciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_services">Buscar servicios</string>
    <string name="todo">TODO</string>
    <string name="birth_control">Birth Control</string>
    <string name="education_and_delivery_of_methods_for_pregnancy_prevention">Education and delivery of methods for
        pregnancy prevention
    </string>
    <string name="item_name">Item Name</string>
    <string name="my_service_item_desc">Service item description
    </string>
    <string name="nearby_centers">Nearby Centers</string>
    <string name="find_more">
        <u>Find More</u>
    </string>
    <string name="location">Ubicación</string>
    <string name="current_location">Ubicación actual…</string>
    <string name="center_one">Centro uno</string>
    <string name="_42_65_4852_1102">+42 – 65–4852–1102</string>
    <string name="give_feedback">Dar opinion</string>
    <string name="operational_hours">Horas operativas</string>
    <string name="services">Servicios</string>
    <string name="doctors_amp_nurses"><![CDATA[Doctors & Nurses]]></string>
    <string name="would_you_like_to_give_feedback">¿Le gustaría darnos su opinión?</string>
    <string name="_08_00_am_to_06_00_pm">08:00 AM to 06:00 PM</string>
    <string name="sunday">domingo</string>
    <string name="dr_rossie_peterson">Dr. Rossie Peterson</string>
    <string name="gynaecologist">Ginecólogo</string>
    <string name="pregnancy_prevention">Prevención del embarazo</string>
    <string name="comment">Comentario</string>
    <string name="optional">(Opcional)</string>
    <string name="send">enviar</string>
    <string name="submit">Enviar</string>
    <string name="provide_your_feedback_for_the_center_you_have_visited">Provide your feedback for the center you have
        visited.
    </string>
    <string name="skip">
        <u>SKIP</u>
    </string>
    <string name="MyAppointments">Mis citas</string>
    <string name="MyReminders">Mis recordatorios</string>
    <string name="_9329_kenyatta_ville_apt_847">9329 Kenyatta Ville Apt, 847</string>
    <string name="services_head">Servicios:</string>
    <string name="main_exit">Haga clic en ATRÁS nuevamente para salir.</string>
    <string name="SearchArticlesServices">Buscar artículos y servicios</string>
    <string name="Relationships">Relationships</string>
    <string name="SexualAndReproductiveHealth">Sexual and Reproductive Health</string>
    <string name="SexualityAndSexualBehaviour">Sexuality and Sexual Behaviour</string>
    <string name="SkillsForHealthAndWellbeing">Skills for Health and Well-being</string>
    <string name="HumanBodyAndDevelopment">The Human Body and Development</string>
    <string name="UnderstandingGender">Understanding Gender</string>
    <string name="ValuesRightsCultureAndSexuality">Values, Rights, Culture and Sexuality</string>
    <string name="ViolenceAndStayingSafe">Violence and Staying Safe</string>
    <string name="cancel">
        <p>
            <u>CANCEL</u>
        </p>
    </string>
    <string name="Images">IMAGES</string>
    <string name="Videos">VIDEOS</string>
    <string name="Topics">TOPICS</string>
    <string name="next">Next</string>
    <string name="disagree">
        <u>DISAGREE</u>
    </string>
    <string name="disclaimer">Descargo de responsabilidad</string>
    <string name="by_agreeing">By Agreeing to provide this information It profile will only be used to help provide you
        with the most \n relevant sexual and reproductive health content
    </string>
    <string name="question_number_1">Pregunta número 1</string>
    <string name="would_you_like_to_share_your_story">¿Te gustaría compartir tu historia?</string>
    <string name="share_story">Compartir historia</string>
    <string name="want_to_talk_with_the_counselor">¿Quieres hablar con The Counselor?</string>
    <string name="call">Llamada</string>
    <string name="chat">Charla</string>
    <string name="story_header">Encabezado de la historia</string>
    <string name="story_description">Descripción de la historia</string>
    <string name="your_name">Tu nombre...</string>
    <string name="tell_your_story">Cuenta tu historia ...</string>
    <string name="story">Historia</string>
    <string name="title">Título</string>
    <string name="your_story_title">El título de tu historia ...</string>
    <string name="submit_story">Enviar historia</string>
    <string name="image_share_srh_content">¿Quieres compartir la imagen también?</string>
    <string name="Share_Content">Compartir contenido</string>
    <string name="PeriodTracker">Seguimiento del período</string>
    <string name="DetailsToTrackPeriod">Proporcione algunos detalles para realizar un seguimiento de sus períodos.</string>
    <string name="MedicationForToday">Medicamentos para hoy</string>
    <string name="NoReminders">Sin recordatorios</string>
    <string name="NoAppointments">Sin citas,</string>
    <string name="AddAppointments">Agregar cita</string>
    <string name="PeriodStarts">El período comienza en</string>
    <string name="days">Dias</string>
    <string name="Last_period_duration">Duración del último período</string>
    <string name="StartPeriod">Período de inicio</string>
    <string name="feel_free_to_share_your_story">Siéntete libre de compartir tu historia</string>
    <string name="your_stories">Tus historias</string>
    <string name="save_as_draft">Guardar como borrador</string>
    <string name="last_period_start">¿Cuándo comenzó su último período? (1/2)</string>
    <string name="Done">Hecho</string>
    <string name="avg_period_length">¿Cuánto dura su período promedio? (2/2)</string>
    <string name="DAYS">DIAS</string>
    <string name="EndPeriod">Periodo final</string>
    <string name="EnterEndDate">Elija la fecha de finalización</string>
    <string name="EnterStartDate">Elija la fecha de inicio</string>
    <string name="MedicineReminder">Recordatorio de medicina</string>
    <string name="SelectTime">Seleccionar hora</string>
    <string name="WithFood">Con comida</string>
    <string name="MEDICINE">MEDICAMENTO</string>
    <string name="Name">Nombre</string>
    <string name="Dose">Dosis</string>
    <string name="Days">Dias</string>
    <string name="REMIND_ME_BEFORE">RECUERDA ANTES</string>
    <string name="SaveAddMore">Guardar y Añadir más</string>
    <string name="PleaseSelectTime">Seleccionar hora</string>
    <string name="EnterMedicineName">Ingrese el nombre del medicamento</string>
    <string name="EnterDose">Ingrese la dosis</string>
    <string name="EnterDays">Ingrese días</string>
    <string name="Are_you_sure">¿Estás seguro?</string>
    <string name="message_del_reminder">Eliminará todos los recordatorios de este medicamento.</string>
    <string name="AddReminder">Agregar recordatorio</string>
    <string name="AppointmentReminder">Recordatorio de cita</string>
    <string name="SelectDate">Seleccione fecha</string>
    <string name="SelectCenter">Seleccionar centro</string>
    <string name="AppointmentName">Nombre de la cita</string>
    <string name="ErrorAppointmentName">Ingrese el nombre de la cita</string>
    <string name="message_del_appointment">Eliminará el evento del calendario para esta cita.</string>
    <string name="PeriodsNotStarted">Tus períodos aún no han comenzado</string>
    <string name="PeriodsOverDue">Periodos vencidos</string>
    <string name="megForgotPeriodLog">Parece que olvidó registrar el período, ¿desea registrarlo ahora?</string>
    <string name="PeriodsLogs">Registros de períodos</string>
    <string name="attempts">attempts</string>
    <string name="NoResult">No Result</string>
    <string name="TryAgain">Try Again</string>
    <string name="TakeQuiz">Take Quiz</string>
    <string name="Passed">Passed</string>
    <string name="Failed">Failed</string>
    <string name="list_of_centers">List of Centers</string>
    <string name="YouHaveGiven">You have given</string>
    <string name="CorrectAnswers">Correct answers.</string>
    <string name="Close">
        <u>CLOSE</u>
    </string>
    <string name="CloseSpanish">
        <u>Cerrar</u>
    </string>
    <string name="choose_language">Choose Language</string>
    <string name="content_setting">Content Settings</string>
    <string name="cache_settings">Data Settings</string>
    <string name="enable_disable_my_health">Enable/Disable \'My Health\'</string>
    <string name="enable_disable_my_services">Enable/Disable \'My Services\'</string>
    <string name="enable_disable_my_voice">Enable/Disable \'My Voice\'</string>
    <string name="enable_disable_my_call">Enable/Disable Call</string>
    <string name="enable_disable_my_chat">Enable/Disable Chat</string>
    <string name="allow_notification">Allow notification</string>
    <string name="maximum_cache_size">Maximum cache size</string>
    <string name="clear_app_data">Clear All Data</string>
    <string name="update_app_data">Update App Data</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="english_us">English(US)</string>
    <string name="_250_mb">250 MB</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="clear_my_knowledge_data">my knowledge data</string>
    <string name="clear_my_service_data">my service data</string>
    <string name="clear_my_voice_data">my voice data</string>
    <string name="clear_my_health_data">my health data</string>
    <string name="no_articles_as_of_now_for_this_category">No hay artículos a partir de ahora para esta categoría.</string>
    <string name="no_hot_topics_as_of_now_in_my_knowledge">No data in hot topics sections as of \n now in my knowledge
    </string>
    <string name="no_guides_as_of_now_in_my_knowledge">No hay informacion para usted en estos momento</string>
    <string name="no_class_as_of_now_in_my_knowledge">No data in class section as of \n now in my knowledge</string>
    <string name="no_result_found">No result found.</string>
    <string name="articles">Articles</string>
    <string name="search_articles">Search articles</string>
    <string name="no_favourite_article_as_of_now">No favourite article as of now.</string>
    <string name="_30">30</string>
    <string name="_5_days">5 Days</string>
    <string name="_4_5_5">4.5/5</string>
    <string name="upto_250_characters">up to 250 characters…</string>
    <string name="would_you_like_to_provide_n_information">Would you like to provide \n information?</string>
    <string name="select_your_country">Select your country</string>
    <string name="name">Name</string>
    <string name="kpExit">Knowledgeable Person has Exit!!!</string>
    <string name="select_another_kp">Please select another knowledgeable person.</string>
    <string name="Ok">Ok</string>
</resources>