<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_side_home"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_my_knowledge"
                android:icon="@drawable/ic_side_my_knowledge"
                android:title="@string/menu_my_knowledge"/>
        <item
                android:id="@+id/nav_my_services"
                android:icon="@drawable/ic_side_my_services"
                android:title="@string/menu_my_services"/>
        <item
                android:id="@+id/nav_my_health"
                android:icon="@drawable/ic_side_my_health"
                android:title="@string/menu_my_health"/>
        <item
                android:id="@+id/nav_my_voice"
                android:icon="@drawable/ic_side_my_voice"
                android:title="@string/menu_my_voice"/>
        <item
                android:id="@+id/nav_my_favourites"
                android:icon="@drawable/ic_side_favourites"
                android:title="@string/menu_my_favourites"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_side_help"
                android:title="@string/menu_help"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_side_about"
                android:title="@string/menu_about"/>
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_side_up_profile"
                android:title="@string/menu_profile"/>

        <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_cd_phone"
                android:title="@string/menu_call"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_side_settings"
                android:title="@string/menu_settings"/>
    </group>

</menu>

