<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.my_voice.MyVoiceShareStoryFragment"
        android:layout_margin="20dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:layout_marginBottom="5dp"
                    android:text="@string/title"
                    tools:ignore="RtlHardcoded"
                    style="@style/TextOrangeHeaderMedium"/>
            <EditText
                    android:id="@+id/edtTitle"
                    android:background="@drawable/rounded_border_edittext"
                    android:layout_width="match_parent"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:gravity="top"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/your_story_title"
                    android:layout_height="40dp">
            </EditText>
            <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:layout_marginBottom="5dp"
                    android:text="@string/story"
                    tools:ignore="RtlHardcoded"
                    style="@style/TextOrangeHeaderMedium"/>
            <EditText
                    android:id="@+id/edtTellYourStory"
                    android:background="@drawable/rounded_border_edittext"
                    android:layout_width="match_parent"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:gravity="top"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/tell_your_story"
                    android:layout_height="200dp">
            </EditText>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone">
                <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left"
                        android:text="@string/name"
                        tools:ignore="RtlHardcoded"
                        style="@style/TextOrangeHeaderMedium"/>
                <TextView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="left"
                        android:text="@string/optional"
                        tools:ignore="RtlHardcoded"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        style="@style/Text11Grey"/>
            </LinearLayout>
            <EditText
                    android:id="@+id/edtSearchLocation"
                    android:background="@drawable/rounded_border_edittext"
                    android:layout_width="match_parent"
                    android:paddingLeft="10dp"
                    android:textSize="14sp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:hint="@string/your_name"
                    android:layout_height="40dp"
                    android:visibility="gone">
            </EditText>
            <Button
                    android:id="@+id/btnSaveAsDraft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/save_as_draft"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_marginBottom="20dp"
                    android:textAppearance="?android:attr/textAppearanceButton"/>
            <Button
                    android:id="@+id/btnSubmitStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:text="@string/submit_story"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textAppearance="?android:attr/textAppearanceButton"/>

        </LinearLayout>
    </ScrollView>
</FrameLayout>