<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="match_parent">
    <ImageView
            android:id="@+id/imgQuizResult"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_quiz_passed_big"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/txtPassed"
            android:text="@string/Passed"
            android:textColor="@color/colorGreen"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:visibility="gone"
            android:layout_below="@+id/imgQuizResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtFaliled"
            android:text="@string/Failed"
            android:textColor="@color/colorRed"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:layout_below="@+id/imgQuizResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/scroeHeader"
            android:layout_width="wrap_content"
            android:text="@string/YouHaveGiven"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtFaliled"
            android:layout_marginTop="20dp"
            style="@style/Text12Grey"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/txtScore"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/scroeHeader"
            android:layout_marginTop="2dp"
            style="@style/Text12Grey"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/scoreBottom"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txtScore"
            android:layout_marginTop="2dp"
            style="@style/Text12Grey"
            android:text="@string/CorrectAnswers"
            android:layout_height="wrap_content"/>
    <Button
            android:id="@+id/btnTryAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/TryAgain"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/scoreBottom"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceButton"/>
    <TextView
            android:id="@+id/txtClose"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnTryAgain"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            style="@style/Text14Blue"
            android:text="@string/Close"
            android:layout_height="wrap_content"/>
</RelativeLayout>