<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@color/colorWhite">
        <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/give_feedback"
                tools:ignore="RtlHardcoded"
                style="@style/TextOrangeHeaderLarge"/>
        <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/provide_your_feedback_for_the_center_you_have_visited"
                tools:ignore="RtlHardcoded"
                style="@style/Text14Regular"/>
        <TextView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/center_one"
                tools:ignore="RtlHardcoded"
                style="@style/Text14Blue"/>
        <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                android:isIndicator="false"
                android:focusable="true"
                android:clickable="true"
                android:progressTint="@color/colorYellow"
                />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
                <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left"
                        android:text="@string/comment"
                        tools:ignore="RtlHardcoded"
                        android:textSize="15sp"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>

                <TextView
                        android:id="@+id/txtOptionalItalic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="left"
                        android:text="@string/optional"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:textColor="#757575"
                        tools:ignore="RtlHardcoded" />
        </LinearLayout>

        <EditText
                android:id="@+id/edtFeedbackText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:textSize="14sp"
                android:hint="@string/upto_250_characters"
                android:maxLength="250"
                android:singleLine="false"
                android:background="@drawable/list_item_border"/>
        <Button
                android:id="@+id/btnSubmitFeedback"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:gravity="center"
                tools:ignore="RtlHardcoded"
                android:textColor="@color/white"
                android:background="@drawable/button_border"/>
        <TextView
                android:id="@+id/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:gravity="center"
                android:layout_marginTop="10dp"
                style="@style/Text14Blue"
                android:textAppearance="?android:attr/textAppearance"/>
</LinearLayout>

