<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_qna_country"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"/>

    <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:layout_below="@+id/imageView"
            android:text="@string/select_your_country"
            style="@style/TextOrangeHeaderLarge"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCountry"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="80dp"
            android:layout_below="@+id/txtHeader"
            android:layout_width="match_parent"
            tools:listitem="@layout/fragment_slide_item_content"
            android:layout_height="match_parent"
    >
    </androidx.recyclerview.widget.RecyclerView>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/submit"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:textAppearance="?android:attr/textAppearanceButton"/>
</RelativeLayout>